--- a/prologin/pages/templates/pages/about-final.html
+++ b/prologin/pages/templates/pages/about-final.html
@@ -19,7 +19,7 @@
 	</div>
 <div class="container"> {# unhack #}
 
-	<h2>{% trans "A 36-hours nonstop contest" %}</h2>
+	<h2>{% trans "A 36-hour nonstop contest" %}</h2>
 	{% get_setting_var 'FINAL_EVENT_DATE_FORMAT' as date_format %}
 
     <p>{% blocktrans %}The final takes place for three days in the EPITA
@@ -108,7 +108,7 @@
 
     <p>{% blocktrans %}The judging system is a client-server architecture
     programmed every year by the Prologin team. The contestant being free of
-    the systems programming part, he can focuses on all the algorithmic aspects
+    the systems programming part, they can focuse on all the algorithmic aspects
     of his submission.{% endblocktrans %}</p>
 
 	<h2>{% trans "Logistics" %}</h2>
@@ -145,7 +145,7 @@
 
     <p>{% blocktrans %}The first phase of the evaluation consists of a great
     tournament during which the programs of all the contestants compete
-    together. As soon as the contest ends, at 1 AM, all the computers are used
+    against one another. As soon as the contest ends, at 1 AM, all the computers are used
     by a distributed tournament system, in order to make thousands of matches,
     and get a precise ranking in equitable conditions.{% endblocktrans %}</p>
 
@@ -154,11 +154,11 @@
     contestant are studied to write an evaluation sheet that will be used
     during the defense.{% endblocktrans %}</p>
 
-    <p>{% blocktrans %}A special jury defines the final ranking after a twenty
-    minutes defense with each of the ten best contestants. This ranking, highly
-    influenced by the results of the tournament, also takes in account the
-    capacity of the contestant to justify his technical choices, the quality of
-    the design of his program and the potential improvements he could have
+    <p>{% blocktrans %}A special jury defines the final ranking after a 
+    twenty-minutes defense with each of the ten best contestants. This ranking, highly
+    influenced by the results of the tournament, also takes into account the
+    capacity of the contestant to justify their technical choices, the quality of
+    the design of his program and the potential improvements they could have
     worked on.{% endblocktrans %}</p>
 
 	<h2>{% trans "Award ceremony" %}</h2>
