--- a/prologin/pages/templates/pages/about-organization.html
+++ b/prologin/pages/templates/pages/about-organization.html
@@ -14,7 +14,7 @@
 
 	<h1>{% trans "About the Prologin organization" %}</h1>
 
-	<p>{% blocktrans %}Prologin is a non-profit organization whose main mission is to develop and organize the
+	<p>{% blocktrans %}Prologin is a nonprofit organization whose main mission is to develop and organize the
 <a href="{{ contest_url }}">Prologin computing contest</a>.{% endblocktrans %}</p>
 
 	<p class="visible-sm visible-xs text-center"><a href="#organization"><i class=" fa fa-arrow-down"></i> {% trans "Jump to description" %}</a></p>
@@ -73,7 +73,7 @@ the “Contact info” box.{% endblocktrans %}</small></p>
 	</div>
 
 	<h2 id="organization">{% trans "A computer enthusiasts organization" %}</h2>
-	{% blocktrans %}<p class="text-justify">The purpose of Prologin is to enable young computer enthusiasts to meet and compete with each other. Indeed,
+	{% blocktrans %}<p class="text-justify">The purpose of Prologin is to enable young computer enthusiasts to meet and compete with one another. Indeed,
 computer science is still largely under represented in French schools. Therefore, those who practice it are
 often self-taught and have an individual practice of it. However, any large project requires teamwork. This is
 why, even though candidates seat the exam individually, the competition should facilitate the exchange of ideas
@@ -81,7 +81,7 @@ between candidates. To promote these exchanges, the Prologin team tries to desig
 put forward playful aspects. Meanwhile, everything is done so that participants can and should exchange ideas
 within a cheerful atmoshpere. Combining work and pleasure is therefore a key objective of Prologin.</p>
 
-<p class="text-justify">We want to allow candidates to take advantage of the competition to enhance their skills. We try to cover as
+<p class="text-justify">We want to allow the candidates to take advantage of the competition to enhance their skills. We try to cover as
 many areas of computer science: artificial intelligence algorithms, general culture, various programming
 languages…</p>
 
