--- a/prologin/pages/templates/pages/about-qualification.html
+++ b/prologin/pages/templates/pages/about-qualification.html
@@ -24,8 +24,8 @@ This is both to publicize the contest and select candidates with the minimum lev
 next stages. This is also an opportunity to encourage young people, including those who will not participate in
 the events which will follow, to tackle the various areas about computing that they may not had the opportunity
 to address so far.{% endblocktrans %}</p>
-	<p>{% blocktrans %}The questionnaire is distributed all over France: 15'000 printed questionnaires are sent to various schools
-(high schools, IUT, colleges, etc.) accompanied by posters. There are sent to former candidates as well,
+	<p>{% blocktrans %}The questionnaire is distributed all over France: posters are sent to various schools
+(high schools, IUT, colleges, etc.). There are sent to former candidates as well,
 who represent the most effective way to publicize the competition.{% endblocktrans %}</p>
 	<p>{% blocktrans %}Some years, the questionnaire is also published in various targeted computer magazines. For example,
 for the 2004 edition, 120'000 copies of the quiz were distributed on paper.{% endblocktrans %}</p>
