--- a/prologin/pages/templates/pages/about-semifinals.html
+++ b/prologin/pages/templates/pages/about-semifinals.html
@@ -20,7 +20,7 @@
 <div class="container"> {# unhack #}
 
 	<p>{% blocktrans %}The semifinal tests are intended to test the capability of candidates to solve algorithmic problems
-but also to implement their solution on a machine, in the programming language they prefer. This is also an
+but also to implement theirs solution on a machine, in the programming language they prefer. This is also an
 opportunity for candidates to meet other enthusiasts, and for the organizers to relate their experience, to help
 them progress.{% endblocktrans %}</p>
 	<p>{% blocktrans %}The 200 to 300 selected candidates are divided into different semifinals, which take place in
@@ -39,8 +39,8 @@ Lille, Toulon, Louvain-la-Neuve and Bordeaux.{% endblocktrans %}</p>
     algorithms for harder problems.{% endblocktrans%}</p>
 
 	<h3>{% trans "The interview" %}</h3>
-    <p>{% blocktrans %}The interview lasts between ten and twenty hours. It
-    is a way for us to meet individually every contestant, test his knowledge,
+    <p>{% blocktrans %}The interview lasts between ten and twenty minutes. It
+    is a way for us to meet individually every contestant, test their knowledge,
     learn about the personal projects he works on, while giving him advices to
     improve.{% endblocktrans %}</p>
 
@@ -100,11 +100,11 @@ Lille, Toulon, Louvain-la-Neuve and Bordeaux.{% endblocktrans %}</p>
 
     <p>{% blocktrans %}The contestants are welcomed at 8h30 AM, and meet together
     while having a free breakfast provided by Prologin. The written exam takes
-    place between 9 AM and 12 AM, during which they also interview with a
+    place between 9 AM and 12 AM, during which they also have an interview with a
     Prologin organizer.{% endblocktrans %}</p>
 
     <p>{% blocktrans %}Before or during the lunch, also provided by Prologin,
-    the organizers present a quick correction of some of the problems they
+    the organizers present a quick correction of some of the problems the candidates have
     just worked on.{% endblocktrans %}</p>
 
     <p>{% blocktrans %}The day continues with the practical test, which lasts
@@ -129,7 +129,7 @@ Lille, Toulon, Louvain-la-Neuve and Bordeaux.{% endblocktrans %}</p>
 
 	<h2>{% trans "Logistics" %}</h2>
 
-    <p>{% blocktrans %}The semifinals are spread over several week-ends, during
+    <p>{% blocktrans %}The semifinals are spread over several weekends, during
     which between one to three semifinals take place in different locations.
     {% endblocktrans %}</p>
 
