forum: refactor to class-based views; add extra fields; cleanup (WIP)
- add django-guardian to dependencies to manage per-object permissions
- add forum to INSTALLED_APPS
- add migration

--- a/prologin/prologin/static/css/prologin.css
+++ b/prologin/prologin/static/css/prologin.css
@@ -428,6 +428,11 @@ footer .legal {
 	text-align: center;
 }
 
+.empty-table-row {
+	background-color: #f5f5f5;
+	padding: 1em;
+}
+
 .sponsor {
 	width: 100%;
 	max-width: 220px;
