--- a/prologin/forum/static/css/forum.css
+++ b/prologin/forum/static/css/forum.css
@@ -1,5 +1,24 @@
 /* Forum style */
 
+.post-content .pyg-hltable {
+	margin: 0 0 10px 0; /* same as p */
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+	border-radius: 3px;
+}
+
+.post-content .pyg-hltable pre {
+	border-radius: 3px;
+}
+
+.post-content .pyg-hltable .pyg-hl {
+	border-radius: 0 3px 3px 0;
+}
+
+.post-content blockquote {
+	font-size: inherit; /* wtf bootstrap */
+	border-left: 5px solid #ccc;
+}
+
 .empty-list-item {
 	background: #f5f5f6;
 	padding: 1em;
@@ -32,6 +51,17 @@
 
 .forum-meta {
 	font-size: 0.9em;
+	margin-bottom: 10px;
+}
+
+.forum-ellipsis {
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow-x: hidden;
+}
+
+.forum-meta .separator {
+	padding: 0 .5em;
 }
 
 .forum-listing > li {
@@ -103,6 +133,10 @@
 	border-bottom: 3px solid #202b66;
 }
 
+.forum-post-list {
+	margin-bottom: 10px;
+}
+
 .post-author {
 	text-align: left;
 }
@@ -114,6 +148,15 @@
 
 .post-author-avatar {
 	text-align: right;
+}
+
+.forum-actions {
+	opacity: 0;
+	transition: opacity linear 0.1s;
+}
+
+.forum-post:hover .forum-actions, .forum-post:active .forum-actions, .forum-meta:focus .forum-actions {
+	opacity: 1;
 }
 
 @media (min-width: 768px) {
