--- a/prologin/forum/templates/forum/forum_threads.html
+++ b/prologin/forum/templates/forum/forum_threads.html
@@ -12,6 +12,12 @@
 
 {% block content %}
 
+	{% if perms.forum.can_create_threads %}
+	<div class="pull-right">
+		{# TODO: per-forum permission checking #}
+		<a href="{% url 'forum:create-thread' forum.slug forum.pk %}" class="btn btn-primary"><i class="fa fa-asterisk"></i> {% trans "Create a new thread" %}</a>
+	</div>
+	{% endif %}
 	<h1>{{ forum.name }}</h1>
 	<div class="text-muted forum-description">{{ forum.description|markdown }}</div>
 
