CSS: added italic variants for Roboto Google font

--- a/prologin/prologin/templates/prologin/base.html
+++ b/prologin/prologin/templates/prologin/base.html
@@ -10,7 +10,7 @@
   <title>{% block super_title %}{% block title %}{% endblock %} – Prologin{% endblock %}</title>
 
   {# Google font, Boostrap, FontAwesome #}
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:700,300"/>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:700,700italic,300,300italic"/>
   <link rel="stylesheet" href="{% static 'lib/css/bootstrap.min.css' %}"/>
   <link rel="stylesheet" href="{% static 'lib/css/font-awesome.min.css' %}"/>
 
