forum: migration from Drupal; minor fixes; back to python-markdown
- mistune wasn't spec-compliant and most of the features we need are
  already implemented as python-markdown extensions

--- a/prologin/forum/static/css/forum.css
+++ b/prologin/forum/static/css/forum.css
@@ -14,6 +14,26 @@
 	border-radius: 0 3px 3px 0;
 }
 
+.post-content .footnote {
+	font-size: 0.9em;
+}
+
+.post-content .footnote hr {
+	margin: 20px 0 10px;
+}
+
+.post-content .footnote ol {
+	margin: 0;
+}
+
+.post-content .footnote ol li p {
+	margin: 0;
+}
+
+.post-content .footnote ol li:target, .post-content sup[id^="fnref"]:target {
+	background: #f7ecb5;
+}
+
 .post-content blockquote {
 	font-size: inherit; /* wtf bootstrap */
 	border-left: 5px solid #ccc;
