--- a/prologin/forum/templates/forum/thread_posts.html
+++ b/prologin/forum/templates/forum/thread_posts.html
@@ -111,6 +111,7 @@
 {% endblock %}
 
 {% block extra_script %}
+	<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 	<script type="text/javascript">
 		/* When clicking permalinks, just scroll to message, don't do the full redirect */
 		$('.message-permalink').click(function (e) {
