--- a/prologin/forum/templates/forum/thread_posts.html
+++ b/prologin/forum/templates/forum/thread_posts.html
@@ -75,7 +75,7 @@
 								</span>
 							{% endif %}
 						</div>
-						<div class="post-content">
+						<div class="post-content tex2jax_process">
 							{% if post.is_visible %}{{ post.content|flavored_markdown }}{% else %}
 								<p class="text-muted"><i class="fa fa-trash"></i> {% trans "Message is deleted." %}</p>
 							{% endif %}
