--- a/prologin/homepage/templates/homepage/jumbotron.html
+++ b/prologin/homepage/templates/homepage/jumbotron.html
@@ -83,7 +83,7 @@
               <div class="col-xs-7 col-sm-12">
                 <div class="desc">
                   <p>{% trans "Consists of a written exam and some problems to solve on the computer. Exam centers are distributed accross France large cities." %}</p>
-                  <p class="text-center"><strong><a style="cursor: pointer"
+                  <p class="text-center dates-link"><strong><a style="cursor: pointer"
                       data-container="body" data-toggle="popover"
                       data-placement="bottom" data-html="true"
                       data-content="
