--- a/prologin/homepage/static/css/homepage.css
+++ b/prologin/homepage/static/css/homepage.css
@@ -143,13 +143,14 @@
   font-size: inherit;
 }
 
-.home-jumbo .tl-block .desc a {
-  color: inherit;
-}
-
 .home-jumbo .tl-block .desc .dates-link {
   margin-bottom: 0;
 }
+
+.home-jumbo .tl-block .desc .dates-link a {
+  color: inherit;
+}
+
 
 .home-jumbo .tl-block h4 {
   font-size: 1.4em;
